tests/ui/dis/ptr_copy.normal.stderr
error: cannot memcpy dynamically sized data
    --> $CORE_SRC/intrinsics.rs:3419:9
     |
3419 |         copy(src, dst, count)
     |         ^^^^^^^^^^^^^^^^^^^^^
     |
note: used from within `core::intrinsics::copy::<f32>`
    --> $CORE_SRC/intrinsics.rs:3399:21
     |
3399 | pub const unsafe fn copy<T>(src: *const T, dst: *mut T, count: usize) {
     |                     ^^^^
note: called by `ptr_copy::copy_via_raw_ptr`
    --> $DIR/ptr_copy.rs:28:18
     |
28   |         unsafe { core::ptr::copy(src, dst, 1) }
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `ptr_copy::main`
    --> $DIR/ptr_copy.rs:33:5
     |
33   |     copy_via_raw_ptr(&i, o);
     |     ^^^^^^^^^^^^^^^^^^^^^^^
note: called by `main`
    --> $DIR/ptr_copy.rs:32:8
     |
32   | pub fn main(i: f32, o: &mut f32) {
     |        ^^^^

error: cannot cast between pointer types
       from `*f32`
         to `*struct () {  }`
    --> $CORE_SRC/intrinsics.rs:3408:9
     |
3408 | /         ub_checks::assert_unsafe_precondition!(
3409 | |             check_language_ub,
3410 | |             "ptr::copy requires that both pointer arguments are aligned and non-null",
3411 | |             (
...    |
3417 | |                 && ub_checks::is_aligned_and_not_null(dst, align)
3418 | |         );
     | |_________^
     |
note: used from within `core::intrinsics::copy::<f32>`
    --> $CORE_SRC/intrinsics.rs:3408:9
     |
3408 | /         ub_checks::assert_unsafe_precondition!(
3409 | |             check_language_ub,
3410 | |             "ptr::copy requires that both pointer arguments are aligned and non-null",
3411 | |             (
...    |
3417 | |                 && ub_checks::is_aligned_and_not_null(dst, align)
3418 | |         );
     | |_________^
note: called by `ptr_copy::copy_via_raw_ptr`
    --> $DIR/ptr_copy.rs:28:18
     |
28   |         unsafe { core::ptr::copy(src, dst, 1) }
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `ptr_copy::main`
    --> $DIR/ptr_copy.rs:33:5
     |
33   |     copy_via_raw_ptr(&i, o);
     |     ^^^^^^^^^^^^^^^^^^^^^^^
note: called by `main`
    --> $DIR/ptr_copy.rs:32:8
     |
32   | pub fn main(i: f32, o: &mut f32) {
     |        ^^^^

error: aborting due to 2 previous errors

